--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.24.0",
     "webpack": "^5.31.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "css-loader": "^5.2.1",
     "html-webpack-plugin": "^5.3.1",
+    "mathjs": "^9.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^2.0.0",
