--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production"
+    "start": "webpack serve --config webpack.dev.js --open",
+    "build": "webpack --config webpack.prod.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,17 +23,21 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "@testing-library/react": "^11.2.6",
     "babel-loader": "^8.2.2",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
     "webpack": "^5.31.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.10",
+    "babel-jest": "^26.6.3",
     "css-loader": "^5.2.1",
     "html-webpack-plugin": "^5.3.1",
     "mathjs": "^9.3.2",
